--- a/style.css
+++ b/style.css
@@ -8,15 +8,21 @@ body{
    min-height: 100vh;
 }
 nav{
+   background-color: rgb(45, 13, 133);
     display: flex;
     justify-content: space-between;
     align-items: center;
     padding: 10px;
+    position: fixed;
+    top: 0%;
+   
+    
 
 }
 ul{
    display: flex; 
    list-style: none;
+   padding-left: 1900px;
   
 }
 li{
@@ -29,7 +35,9 @@ li{
    margin: 30px;
 } 
 .droite{
-   width: 50%;
+   width: 40%;
+   padding: 200px;
+   line-height: 20rem;
   
 }
 #router{
@@ -40,14 +48,17 @@ li{
    align-items: center;
 }
 .titre{
-   font-size: 6rem;
+   font-size: 50px;
+   height: 100px;
+   
 }
 .stitre{
-   font-size: 1.5rem;
+   font-size: 3rem;
    color: blue;
+   height: 90px;
 }
 p{
-  font-size: 0.8rem; 
+  font-size: 5rem; 
 }
 .foot{ 
 background-color: black;
@@ -84,4 +95,45 @@ width: 90px;
    padding-top: px;
    
 }
+
+   /*Responsivité de la plateforme*/
+   @media screen and(max-whith:1050PX) {
+      .titre{
+         font-size: 3.5rem;
+      }
+      
+   }
+   .foot{
+      background-color: black;
+      padding:30px ;
+      display: flex;
+      justify-content: space-between;
+   }
+   .right{
+      width: 50%;
+   }
+   @media screen and (max-whith:885rem) {
+     .titre{
+      font-size: 2.5rem;
+     }
+     .stitre{
+      font-size: 1rem;
+     } 
+     li{
+      font-size: 0.8rem;
+     }
+     .right{
+      width: 50%;
+     }
+   }
+     
    
+    
+   .titre{
+      font-size: 3.5rem;
+
+   }
+   p{
+      font-size: 1rem;
+   }
+    
